POST en cours (UI + Requête). Certaines fonctionnalités sont désactivées pour cause de bug. MàJ le graphique lorsqu'un yAxis est 'collapsed' (réduit) cause un crash d'HighCharts. &uniquenames est donc déconseillé
Exemple de requête: http://osmose-pc_35:85/id-0000192.168.86.421179-0/img/HighCharts-Gantt-Os06/index.html?data=doc_vegarw/4_Supervision/gantt_oris/gantt_oris_gestion.ini&id=id0&start=start&end=end&name=name&category=category&complete=complete&color=color&owner=owner&icon=icon&dependency=dependency&debug=error&title=Ceci%20est%20un%20titre&subtitle=Ceci%20est%20un%20sous-titre&minwidth=4000&label=owner&uniquenames=true&parent=parent

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,3 +69,40 @@ div#loading-overlay {
         transform: rotate(1800deg);
     }
 }
+
+/* Masquer le formulaire servant de template */
+#secret-santa {
+    display: none;
+}
+/* L'afficher lorsqu'il est dans le popup */
+.ajs-content #secret-santa {
+    display: inline-block;
+}
+/*
+  Pour changer la taille du popup, il faut le rendre "resizable"
+  mais ceci rajoute une scrollbar lors que l'on afficher le DateTimePicker
+*/
+.alertify.ajs-resizable .ajs-body .ajs-content {
+    overflow: visible;
+}
+/*
+  Masquer le widget sur lequel il faut cliquer pour redimensionner le popup:
+  On ne veut pas rendre ça possible car on a "overflow:visible"
+*/
+.ajs-dialog .ajs-handle {
+    display: none !important;
+}
+
+.form-control,
+.input-group-text,
+.custom-select,
+.bootstrap-select .btn,
+.bootstrap-select .dropdown-menu{
+    border-radius: 0 !important;
+}
+
+/* Cohérence de style entre Bootstrap 4 et la librairie pour les <select> */
+.bootstrap-select button {
+    background: #fff;
+    border-color: #dae0e5;
+}
